--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Template-Plugin-GoogleLaTeX
 
+0.02    2010/08/26 15:39:18 UTC
+        OMG. Forgot to replace the stock README.
+
 0.01    2010/08/25 17:31:53 UTC
         First version.
 
